@@ -1,11 +1,9 @@
 package uk.gov.justice.laa.portal.landingpage.controller;
 
-import static uk.gov.justice.laa.portal.landingpage.utils.RestUtils.getListFromHttpSession;
-import static uk.gov.justice.laa.portal.landingpage.utils.RestUtils.getObjectFromHttpSession;
-
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -13,9 +11,11 @@ import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.UUID;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 import org.modelmapper.ModelMapper;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.AccessDeniedException;
@@ -36,6 +36,7 @@ import org.springframework.web.bind.annotation.ResponseBody;
 import org.springframework.web.servlet.mvc.support.RedirectAttributes;
 import org.springframework.web.servlet.view.RedirectView;
 
+import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpSession;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
@@ -57,7 +58,7 @@ import uk.gov.justice.laa.portal.landingpage.entity.Permission;
 import uk.gov.justice.laa.portal.landingpage.entity.UserProfile;
 import uk.gov.justice.laa.portal.landingpage.entity.UserType;
 import uk.gov.justice.laa.portal.landingpage.exception.CreateUserDetailsIncompleteException;
-import uk.gov.justice.laa.portal.landingpage.exception.RoleCoverageException;
+import uk.gov.justice.laa.portal.landingpage.exception.TechServicesClientException;
 import uk.gov.justice.laa.portal.landingpage.forms.ApplicationsForm;
 import uk.gov.justice.laa.portal.landingpage.forms.EditUserDetailsForm;
 import uk.gov.justice.laa.portal.landingpage.forms.FirmReassignmentForm;
@@ -68,6 +69,7 @@ import uk.gov.justice.laa.portal.landingpage.forms.RolesForm;
 import uk.gov.justice.laa.portal.landingpage.forms.UserDetailsForm;
 import uk.gov.justice.laa.portal.landingpage.model.OfficeModel;
 import uk.gov.justice.laa.portal.landingpage.model.PaginatedUsers;
+import uk.gov.justice.laa.portal.landingpage.model.UserRole;
 import uk.gov.justice.laa.portal.landingpage.service.AccessControlService;
 import uk.gov.justice.laa.portal.landingpage.service.EmailValidationService;
 import uk.gov.justice.laa.portal.landingpage.service.EventService;
@@ -75,8 +77,11 @@ import uk.gov.justice.laa.portal.landingpage.service.FirmService;
 import uk.gov.justice.laa.portal.landingpage.service.LoginService;
 import uk.gov.justice.laa.portal.landingpage.service.OfficeService;
 import uk.gov.justice.laa.portal.landingpage.service.RoleAssignmentService;
-import uk.gov.justice.laa.portal.landingpage.service.UserService;
+import uk.gov.justice.laa.portal.landingpage.techservices.SendUserVerificationEmailResponse;
+import uk.gov.justice.laa.portal.landingpage.techservices.TechServicesApiResponse;
 import uk.gov.justice.laa.portal.landingpage.utils.CcmsRoleGroupsUtil;
+import static uk.gov.justice.laa.portal.landingpage.utils.RestUtils.getListFromHttpSession;
+import static uk.gov.justice.laa.portal.landingpage.utils.RestUtils.getObjectFromHttpSession;
 import uk.gov.justice.laa.portal.landingpage.utils.UserUtils;
 import uk.gov.justice.laa.portal.landingpage.viewmodel.AppRoleViewModel;
 
@@ -99,12 +104,20 @@ public class UserController {
     private final RoleAssignmentService roleAssignmentService;
     private final EmailValidationService emailValidationService;
 
+    @Value("${feature.flag.enable.resend.verification.code}")
+    private boolean enableResendVerificationCode;
+
     @GetMapping("/user/firms/search")
     @ResponseBody
     @PreAuthorize("@accessControlService.authenticatedUserHasAnyGivenPermissions(T(uk.gov.justice.laa.portal.landingpage.entity.Permission).VIEW_EXTERNAL_USER,"
             + "T(uk.gov.justice.laa.portal.landingpage.entity.Permission).VIEW_INTERNAL_USER)")
     public List<FirmDto> getFirms(Authentication authentication,
             @RequestParam(value = "q", defaultValue = "") String query) {
+        // If the query is blank/whitespace-only, return an empty result and do not
+        // call the service to avoid unnecessary work.
+        if (query == null || query.trim().isEmpty()) {
+            return new ArrayList<>();
+        }
         EntraUser entraUser = loginService.getCurrentEntraUser(authentication);
         return firmService.getUserAccessibleFirms(entraUser, query);
     }
@@ -125,6 +138,7 @@ public class UserController {
             Model model, HttpSession session, Authentication authentication) {
 
         // Process request parameters and handle session filters
+        search = search == null ? "" : search.trim();
         Map<String, Object> processedFilters = processRequestFilters(size, page, sort, direction, usertype, search,
                 showFirmAdmins, backButton, session, firmSearchForm);
         size = (Integer) processedFilters.get("size");
@@ -292,8 +306,13 @@ public class UserController {
         model.addAttribute("isAccessGranted", isAccessGranted);
         boolean externalUser = UserType.EXTERNAL == optionalUser.get().getUserType();
         model.addAttribute("externalUser", externalUser);
-        boolean showOfficesTab = externalUser; // Hide for internal users, show for external users
-        model.addAttribute("showOfficesTab", showOfficesTab);
+
+        // Check if current user can manage offices - align with actual endpoint
+        // authorization
+        boolean canManageOffices = externalUser
+                && accessControlService.authenticatedUserHasPermission(Permission.EDIT_USER_OFFICE)
+                && canEditUser;
+        model.addAttribute("showOfficesTab", canManageOffices);
 
         model.addAttribute("canEditUser", canEditUser);
 
@@ -304,12 +323,68 @@ public class UserController {
         model.addAttribute("canReassignFirm", canReassignFirm);
 
         model.addAttribute(ModelAttributes.PAGE_TITLE, "Manage user - " + optionalUser.get().getFullName());
+        boolean showResendVerificationLink = enableResendVerificationCode
+                && accessControlService.canSendVerificationEmail(id);
+        model.addAttribute("showResendVerificationLink", showResendVerificationLink);
 
         // Add filter state to model for "Back to search results" link
         @SuppressWarnings("unchecked")
         Map<String, Object> filters = (Map<String, Object>) session.getAttribute("userListFilters");
         boolean hasFilters = filters != null && hasActiveFilters(filters);
         model.addAttribute("hasFilters", hasFilters);
+
+        return "manage-user";
+    }
+
+    @GetMapping("/user/{id}/verify")
+    @PreAuthorize("@accessControlService.canSendVerificationEmail(#id)")
+    public String resendActivationCode(@PathVariable String id, Model model, HttpSession session) {
+        if (!enableResendVerificationCode) {
+            log.error("Resend activation code is disabled");
+            throw new AccessDeniedException("Resend verification is disabled.");
+        }
+
+        Optional<UserProfileDto> optionalUser = userService.getUserProfileById(id);
+
+        List<AppRoleDto> userAppRoles = optionalUser.get().getAppRoles().stream()
+                .map(appRoleDto -> mapper.map(appRoleDto, AppRoleDto.class))
+                .sorted()
+                .collect(Collectors.toList());
+        List<OfficeDto> userOffices = optionalUser.get().getOffices();
+        final Boolean isAccessGranted = userService.isAccessGranted(optionalUser.get().getId().toString());
+        final Boolean canEditUser = accessControlService.canEditUser(optionalUser.get().getId().toString());
+        optionalUser.ifPresent(user -> model.addAttribute("user", user));
+        model.addAttribute("userAppRoles", userAppRoles);
+        model.addAttribute("userOffices", userOffices);
+        model.addAttribute("isAccessGranted", isAccessGranted);
+        boolean externalUser = UserType.EXTERNAL == optionalUser.get().getUserType();
+        model.addAttribute("externalUser", externalUser);
+        boolean showOfficesTab = externalUser; // Hide for internal users, show for external users
+        model.addAttribute("showOfficesTab", showOfficesTab);
+
+        model.addAttribute("canEditUser", canEditUser);
+        model.addAttribute(ModelAttributes.PAGE_TITLE, "Manage user - " + optionalUser.get().getFullName());
+        boolean showResendVerificationLink = enableResendVerificationCode
+                && accessControlService.canSendVerificationEmail(id);
+        model.addAttribute("showResendVerificationLink", showResendVerificationLink);
+
+        // Add filter state to model for "Back to search results" link
+        @SuppressWarnings("unchecked")
+        Map<String, Object> filters = (Map<String, Object>) session.getAttribute("userListFilters");
+        boolean hasFilters = filters != null && hasActiveFilters(filters);
+        model.addAttribute("hasFilters", hasFilters);
+
+        try {
+            TechServicesApiResponse<SendUserVerificationEmailResponse> response = userService.sendVerificationEmail(id);
+            if (response.isSuccess()) {
+                model.addAttribute("successMessage", response.getData().getMessage());
+            } else {
+                model.addAttribute("errorMessage", response.getError().getMessage());
+            }
+        } catch (RuntimeException runtimeException) {
+            log.error("Error sending activation code for user profile: {}", id, runtimeException);
+            throw runtimeException;
+        }
 
         return "manage-user";
     }
@@ -344,14 +419,15 @@ public class UserController {
         if (Objects.isNull(user)) {
             user = new EntraUserDto();
         }
+        if (Objects.nonNull(userDetailsForm.getEmail()) && !userDetailsForm.getEmail().isEmpty()) {
+            if (userService.userExistsByEmail(userDetailsForm.getEmail())) {
+                result.rejectValue("email", "error.email", "Email address already exists");
+            }
 
-        if (userService.userExistsByEmail(userDetailsForm.getEmail())) {
-            result.rejectValue("email", "error.email", "Email address already exists");
-        }
-
-        if (!emailValidationService.isValidEmailDomain(userDetailsForm.getEmail())) {
-            result.rejectValue("email", "email.invalidDomain",
-                    "The email address domain is not valid or cannot receive emails.");
+            if (!emailValidationService.isValidEmailDomain(userDetailsForm.getEmail())) {
+                result.rejectValue("email", "email.invalidDomain",
+                        "The email address domain is not valid or cannot receive emails.");
+            }
         }
 
         if (result.hasErrors()) {
@@ -386,7 +462,8 @@ public class UserController {
     }
 
     @GetMapping("/user/create/firm")
-    public String createUserFirm(FirmSearchForm firmSearchForm, HttpSession session, Model model) {
+    public String createUserFirm(FirmSearchForm firmSearchForm, HttpSession session, Model model,
+            @RequestParam(value = "firmSearchResultCount", defaultValue = "10") Integer count) {
 
         // If firmSearchForm is already populated from session (e.g., validation
         // errors), keep it
@@ -394,20 +471,37 @@ public class UserController {
         if (existingForm != null) {
             firmSearchForm = existingForm;
             session.removeAttribute("firmSearchForm");
+        } else if (session.getAttribute("firm") != null) {
+            // Grab firm search details from session firm if coming here from the
+            // confirmation screen.
+            FirmDto firm = (FirmDto) session.getAttribute("firm");
+            firmSearchForm = FirmSearchForm.builder()
+                    .selectedFirmId(firm.getId())
+                    .firmSearch(firm.getName())
+                    .build();
         }
-
+        int validatedCount = Math.max(10, Math.min(count, 100));
         model.addAttribute("firmSearchForm", firmSearchForm);
+        model.addAttribute("firmSearchResultCount", validatedCount);
         model.addAttribute(ModelAttributes.PAGE_TITLE, "Select firm");
         return "add-user-firm";
     }
 
     @GetMapping("/user/create/firm/search")
     @ResponseBody
-    public List<Map<String, String>> searchFirms(@RequestParam(value = "q", defaultValue = "") String query) {
-        List<FirmDto> firms = firmService.searchFirms(query);
+    public List<Map<String, String>> searchFirms(@RequestParam(value = "q", defaultValue = "") String query,
+            @RequestParam(value = "firmSearchResultCount", defaultValue = "10") Integer count) {
+        // If the query is blank/whitespace-only, return an empty result and do not
+        // call the service to avoid unnecessary work.
+        if (query == null || query.trim().isEmpty()) {
+            return new ArrayList<>();
+        }
+
+        int validatedCount = Math.max(10, Math.min(count, 100));
+        List<FirmDto> firms = firmService.searchFirms(query.trim());
 
         List<Map<String, String>> result = firms.stream()
-                .limit(10) // Limit results to prevent overwhelming the UI
+                .limit(validatedCount) // Limit results to prevent overwhelming the UI
                 .map(firm -> {
                     Map<String, String> firmData = new HashMap<>();
                     firmData.put("id", firm.getId().toString());
@@ -482,7 +576,7 @@ public class UserController {
 
     @PostMapping("/user/create/check-answers")
     @PreAuthorize("@accessControlService.authenticatedUserHasPermission(T(uk.gov.justice.laa.portal.landingpage.entity.Permission).CREATE_EXTERNAL_USER)")
-    public String addUserCheckAnswers(HttpSession session, Authentication authentication) {
+    public String addUserCheckAnswers(HttpSession session, Authentication authentication, Model model) {
         Optional<EntraUserDto> userOptional = getObjectFromHttpSession(session, "user", EntraUserDto.class);
         Optional<FirmDto> firmOptional = Optional.ofNullable((FirmDto) session.getAttribute("firm"));
         boolean userManager = getObjectFromHttpSession(session, "isUserManager", Boolean.class).orElseThrow();
@@ -490,13 +584,27 @@ public class UserController {
             EntraUserDto user = userOptional.get();
             FirmDto selectedFirm = firmOptional.orElseGet(FirmDto::new);
             CurrentUserDto currentUserDto = loginService.getCurrentUser(authentication);
-            EntraUser entraUser = userService.createUser(user, selectedFirm,
-                    userManager, currentUserDto.getName());
-            session.setAttribute("userProfile",
-                    mapper.map(entraUser.getUserProfiles().stream().findFirst(), UserProfileDto.class));
-            CreateUserAuditEvent createUserAuditEvent = new CreateUserAuditEvent(currentUserDto, entraUser,
-                    selectedFirm.getName(), userManager);
-            eventService.logEvent(createUserAuditEvent);
+            try {
+                EntraUser entraUser = userService.createUser(user, selectedFirm,
+                        userManager, currentUserDto.getName());
+                session.setAttribute("userProfile",
+                        mapper.map(entraUser.getUserProfiles().stream().findFirst(), UserProfileDto.class));
+                CreateUserAuditEvent createUserAuditEvent = new CreateUserAuditEvent(currentUserDto, entraUser,
+                        selectedFirm.getName(), userManager);
+                eventService.logEvent(createUserAuditEvent);
+            } catch (TechServicesClientException techServicesClientException) {
+                log.debug("Error creating user: {}", techServicesClientException.getMessage());
+                model.addAttribute("errorMessage", techServicesClientException.getMessage());
+                model.addAttribute("errors", techServicesClientException.getErrors());
+
+                model.addAttribute("user", user);
+                model.addAttribute("firm", selectedFirm);
+                boolean isUserManager = (boolean) session.getAttribute("isUserManager");
+                model.addAttribute("isUserManager", isUserManager);
+                model.addAttribute(ModelAttributes.PAGE_TITLE, "Check your answers");
+                return "add-user-check-answers";
+            }
+
         } else {
             log.error("No user attribute was present in request. User not created.");
         }
@@ -551,13 +659,19 @@ public class UserController {
      */
 
     @GetMapping("/users/edit/{id}/details")
-    @PreAuthorize("@accessControlService.authenticatedUserHasPermission(T(uk.gov.justice.laa.portal.landingpage.entity.Permission).EDIT_USER_DETAILS) && @accessControlService.canEditUser(#id)")
-    public String editUserDetails(@PathVariable String id, Model model) {
-        UserProfileDto user = userService.getUserProfileById(id).orElseThrow();
-        EditUserDetailsForm editUserDetailsForm = new EditUserDetailsForm();
-        editUserDetailsForm.setFirstName(user.getEntraUser().getFirstName());
-        editUserDetailsForm.setLastName(user.getEntraUser().getLastName());
-        editUserDetailsForm.setEmail(user.getEntraUser().getEmail());
+    @PreAuthorize("@accessControlService.canEditUser(#id)")
+    public String editUserDetails(@PathVariable String id, Model model, HttpSession session) {
+        UserProfileDto user = (UserProfileDto) session.getAttribute("user");
+        if (Objects.isNull(user)) {
+            user = userService.getUserProfileById(id).orElseThrow();
+        }
+        EditUserDetailsForm editUserDetailsForm = (EditUserDetailsForm) session.getAttribute("editUserDetailsForm");
+        if (Objects.isNull(editUserDetailsForm)) {
+            editUserDetailsForm = new EditUserDetailsForm();
+            editUserDetailsForm.setFirstName(user.getEntraUser().getFirstName());
+            editUserDetailsForm.setLastName(user.getEntraUser().getLastName());
+            editUserDetailsForm.setEmail(user.getEntraUser().getEmail());
+        }
         model.addAttribute("editUserDetailsForm", editUserDetailsForm);
         model.addAttribute("user", user);
         model.addAttribute(ModelAttributes.PAGE_TITLE, "Edit user details - " + user.getFullName());
@@ -576,22 +690,62 @@ public class UserController {
      * @throws IllegalArgumentException If the user ID is invalid or not found
      */
     @PostMapping("/users/edit/{id}/details")
-    @PreAuthorize("@accessControlService.authenticatedUserHasPermission(T(uk.gov.justice.laa.portal.landingpage.entity.Permission).EDIT_USER_DETAILS) && @accessControlService.canEditUser(#id)")
+    @PreAuthorize("@accessControlService.canEditUser(#id)")
     public String updateUserDetails(@PathVariable String id,
             @Valid EditUserDetailsForm editUserDetailsForm, BindingResult result,
             HttpSession session) throws IOException {
+        UserProfileDto user = userService.getUserProfileById(id).orElseThrow();
+        session.setAttribute("user", user);
+        session.setAttribute("editUserDetailsForm", editUserDetailsForm);
         if (result.hasErrors()) {
             log.debug("Validation errors occurred while updating user details: {}", result.getAllErrors());
             // If there are validation errors, return to the edit user details page with
             // errors
-            UserProfileDto user = userService.getUserProfileById(id).orElseThrow();
-            session.setAttribute("user", user);
-            session.setAttribute("editUserDetailsForm", editUserDetailsForm);
             return "edit-user-details";
         }
+        return "redirect:/admin/users/edit/" + id + "/details-check-answer";
+    }
+
+    @GetMapping("/users/edit/{id}/details-check-answer")
+    @PreAuthorize("@accessControlService.canEditUser(#id)")
+    public String updateUserDetailsCheck(@PathVariable String id, Model model,
+            HttpSession session) throws IOException {
+        EditUserDetailsForm editUserDetailsForm = (EditUserDetailsForm) session.getAttribute("editUserDetailsForm");
+        if (Objects.isNull(editUserDetailsForm)) {
+            return "redirect:/admin/users/manage/" + id;
+        }
+        UserProfileDto user = userService.getUserProfileById(id).orElseThrow();
+        model.addAttribute("editUserDetailsForm", editUserDetailsForm);
+        model.addAttribute("user", user);
+        model.addAttribute(ModelAttributes.PAGE_TITLE,
+                "Edit user details - Check your answers - " + user.getFullName());
+        return "edit-user-details-check-answer";
+    }
+
+    /**
+     * Update user details
+     *
+     * @param id      User ID
+     * @param session HttpSession to store user details
+     * @return Redirect to user management page
+     * @throws IOException              If an error occurs during user update
+     * @throws IllegalArgumentException If the user ID is invalid or not found
+     */
+    @PostMapping("/users/edit/{id}/details-check-answer")
+    @PreAuthorize("@accessControlService.canEditUser(#id)")
+    public String updateUserDetailsSubmit(@PathVariable String id,
+            HttpSession session) throws IOException {
+        UserProfileDto user = userService.getUserProfileById(id).orElseThrow();
+        EditUserDetailsForm editUserDetailsForm = (EditUserDetailsForm) session.getAttribute("editUserDetailsForm");
+        if (Objects.isNull(editUserDetailsForm)) {
+            return "redirect:/admin/users/manage/" + id;
+        }
         // Update user details
-        userService.updateUserDetails(id, editUserDetailsForm.getFirstName(), editUserDetailsForm.getLastName());
-        return "redirect:/admin/users/manage/" + id;
+        // TODO audit log needed
+        userService.updateUserDetails(user.getEntraUser().getId(), editUserDetailsForm.getFirstName(),
+                editUserDetailsForm.getLastName());
+        session.removeAttribute("editUserDetailsForm");
+        return "redirect:/admin/users/edit/" + id + "/confirmation";
     }
 
     /**
@@ -601,20 +755,34 @@ public class UserController {
     @PreAuthorize("@accessControlService.canEditUser(#id)")
     public String editUserApps(@PathVariable String id,
             @RequestParam(value = "errorMessage", required = false) String errorMessage,
-            Model model) {
+            Model model, HttpSession session, Authentication authentication) {
+        UserProfile currentUserProfile = loginService.getCurrentProfile(authentication);
         UserProfileDto user = userService.getUserProfileById(id).orElseThrow();
         UserType userType = user.getUserType();
         Set<AppDto> userAssignedApps = userService.getUserAppsByUserId(id);
         List<AppDto> availableApps = userService.getAppsByUserType(userType);
 
-        // Add selected attribute to available apps based on user assigned apps
-        availableApps.forEach(app -> {
-            app.setSelected(userAssignedApps.stream()
-                    .anyMatch(userApp -> userApp.getId().equals(app.getId())));
-        });
+        List<AppDto> editableApps = availableApps.stream()
+                .filter(app -> roleAssignmentService.canUserAssignRolesForApp(currentUserProfile, app))
+                .toList();
+
+        @SuppressWarnings("unchecked")
+        Map<Integer, List<String>> selectedAppRole = (Map<Integer, List<String>>) session
+                .getAttribute("editUserAllSelectedRoles");
+        if (Objects.isNull(selectedAppRole)) {
+            // Add selected attribute to available apps based on user assigned apps
+            editableApps.forEach(app -> {
+                app.setSelected(userAssignedApps.stream()
+                        .anyMatch(userApp -> userApp.getId().equals(app.getId())));
+            });
+        } else {
+            editableApps.forEach(app -> {
+                app.setSelected(selectedAppRole.containsKey(app.getId()));
+            });
+        }
 
         model.addAttribute("user", user);
-        model.addAttribute("apps", availableApps);
+        model.addAttribute("apps", editableApps);
         model.addAttribute(ModelAttributes.PAGE_TITLE, "Edit user services - " + user.getFullName());
         if (errorMessage != null) {
             model.addAttribute("errorMessage", errorMessage);
@@ -626,34 +794,15 @@ public class UserController {
     @PreAuthorize("@accessControlService.canEditUser(#id)")
     public RedirectView setSelectedAppsEdit(@PathVariable String id,
             @RequestParam(value = "apps", required = false) List<String> apps,
-            Authentication authentication,
-            HttpSession session, RedirectAttributes redirectAttributes) {
+            HttpSession session) {
         // Handle case where no apps are selected (apps will be null)
         List<String> selectedApps = apps != null ? apps : new ArrayList<>();
         session.setAttribute("selectedApps", selectedApps);
-
         if (selectedApps.isEmpty()) {
-            // Update user to have no roles (empty list)
-            UserProfileDto userProfileDto = userService.getUserProfileById(id).orElse(null);
-            try {
-                CurrentUserDto currentUserDto = loginService.getCurrentUser(authentication);
-                String changed = userService.updateUserRoles(id, new ArrayList<>(), currentUserDto.getUserId());
-                UpdateUserAuditEvent updateUserAuditEvent = new UpdateUserAuditEvent(
-                        userProfileDto != null ? userProfileDto.getId() : null,
-                        currentUserDto,
-                        userProfileDto != null ? userProfileDto.getEntraUser() : null,
-                        changed, "apps");
-                eventService.logEvent(updateUserAuditEvent);
-            } catch (RoleCoverageException e) {
-                String errorMessage = e.getMessage();
-                redirectAttributes.addFlashAttribute("errorMessage",
-                        errorMessage);
-                UUID uuid = UUID.fromString(id);
-                return new RedirectView(String.format("/admin/users/edit/%s/apps", uuid));
-            }
             // Ensure passed in ID is a valid UUID to avoid open redirects.
+            session.setAttribute("editUserAllSelectedRoles", new HashMap<>());
             UUID uuid = UUID.fromString(id);
-            return new RedirectView(String.format("/admin/users/manage/%s", uuid));
+            return new RedirectView(String.format("/admin/users/edit/%s/roles-check-answer", uuid));
         }
 
         // Ensure passed in ID is a valid UUID to avoid open redirects.
@@ -699,13 +848,7 @@ public class UserController {
             return "redirect:/admin/users/manage/" + id;
         }
 
-        Model modelFromSession = (Model) session.getAttribute("userEditRolesModel");
-        Integer currentSelectedAppIndex;
-        if (modelFromSession != null && modelFromSession.getAttribute("editUserRolesSelectedAppIndex") != null) {
-            currentSelectedAppIndex = (Integer) modelFromSession.getAttribute("editUserRolesSelectedAppIndex");
-        } else {
-            currentSelectedAppIndex = selectedAppIndex != null ? selectedAppIndex : 0;
-        }
+        Integer currentSelectedAppIndex = selectedAppIndex != null ? selectedAppIndex : 0;
 
         // Ensure the index is within bounds
         if (currentSelectedAppIndex >= selectedApps.size()) {
@@ -715,11 +858,22 @@ public class UserController {
         List<AppRoleDto> roles = userService.getAppRolesByAppIdAndUserType(selectedApps.get(currentSelectedAppIndex),
                 user.getUserType());
         UserProfile editorProfile = loginService.getCurrentProfile(authentication);
-        roles = roleAssignmentService.filterRoles(editorProfile.getAppRoles(), roles);
+        roles = roleAssignmentService.filterRoles(editorProfile.getAppRoles(),
+                roles.stream().map(role -> UUID.fromString(role.getId())).toList());
         List<AppRoleDto> userRoles = userService.getUserAppRolesByUserId(id);
+        @SuppressWarnings("unchecked")
+        Map<Integer, List<String>> editUserAllSelectedRoles = (Map<Integer, List<String>>) session
+                .getAttribute("editUserAllSelectedRoles");
+        if (Objects.isNull(editUserAllSelectedRoles)) {
+            editUserAllSelectedRoles = new HashMap<>();
+        }
         // Get currently selected roles from session or use user's existing roles
-        List<String> selectedRoles = getListFromHttpSession(session, "editUserRoles", String.class)
-                .orElseGet(() -> userRoles.stream().map(AppRoleDto::getId).collect(Collectors.toList()));
+        List<String> selectedRoles;
+        if (editUserAllSelectedRoles.get(selectedAppIndex) != null) {
+            selectedRoles = editUserAllSelectedRoles.get(selectedAppIndex);
+        } else {
+            selectedRoles = userRoles.stream().map(AppRoleDto::getId).collect(Collectors.toList());
+        }
         AppDto currentApp = userService.getAppByAppId(selectedApps.get(currentSelectedAppIndex)).orElseThrow();
 
         List<AppRoleViewModel> appRoleViewModels = roles.stream()
@@ -756,9 +910,6 @@ public class UserController {
         model.addAttribute("editUserRolesSelectedAppIndex", currentSelectedAppIndex);
         model.addAttribute("editUserRolesCurrentApp", currentApp);
 
-        // Store the model in session to handle validation errors later and track
-        // currently selected app.
-        session.setAttribute("userEditRolesModel", model);
         model.addAttribute(ModelAttributes.PAGE_TITLE, "Edit user roles - " + user.getFullName());
         if (errorMessage != null) {
             model.addAttribute("errorMessage", errorMessage);
@@ -771,7 +922,6 @@ public class UserController {
      * 
      * @param id               User ID
      * @param selectedAppIndex Index of the currently selected app
-     * @param authentication   Authentication object for the current user
      * @param session          HttpSession to store selected apps and roles
      * @return Redirect view to the user management page or next app roles page
      * @throws IllegalArgumentException If the user ID is invalid or not found
@@ -782,46 +932,8 @@ public class UserController {
     public String updateUserRoles(@PathVariable String id,
             @Valid RolesForm rolesForm, BindingResult result,
             @RequestParam int selectedAppIndex,
-            Authentication authentication,
-            Model model, HttpSession session) {
-        Model modelFromSession = (Model) session.getAttribute("userEditRolesModel");
+            HttpSession session) {
 
-        // Ensure passed in ID is a valid UUID to avoid open redirects.
-        UUID uuid = UUID.fromString(id);
-
-        if (modelFromSession == null) {
-            return "redirect:/admin/users/edit/" + uuid + "/roles";
-        }
-        if (result.hasErrors()) {
-            log.debug("Validation errors occurred while setting user roles: {}", result.getAllErrors());
-            // If there are validation errors, return to the roles page with errors
-            // and role unseleected if it is not in the list
-            @SuppressWarnings("unchecked")
-            List<AppRoleViewModel> roles = (List<AppRoleViewModel>) modelFromSession.getAttribute("roles");
-            if (roles != null) {
-                // Add null check for rolesForm.getRoles()
-                List<String> selectedRoleIds = rolesForm.getRoles() != null ? rolesForm.getRoles() : new ArrayList<>();
-                roles.forEach(role -> {
-                    if (!selectedRoleIds.contains(role.getId())) {
-                        role.setSelected(false);
-                    }
-                });
-            }
-            if (roles != null) {
-                model.addAttribute("roles", roles);
-            }
-
-            model.addAttribute("user", modelFromSession.getAttribute("user"));
-            model.addAttribute("editUserRolesSelectedAppIndex",
-                    modelFromSession.getAttribute("editUserRolesSelectedAppIndex"));
-            model.addAttribute("editUserRolesCurrentApp", modelFromSession.getAttribute("editUserRolesCurrentApp"));
-
-            return "edit-user-roles";
-        }
-
-        UserProfileDto user = userService.getUserProfileById(id).orElse(null);
-        List<String> selectedApps = getListFromHttpSession(session, "selectedApps", String.class)
-                .orElseGet(ArrayList::new);
         @SuppressWarnings("unchecked")
         Map<Integer, List<String>> allSelectedRolesByPage = (Map<Integer, List<String>>) session
                 .getAttribute("editUserAllSelectedRoles");
@@ -831,39 +943,138 @@ public class UserController {
         // Add the roles for the currently selected app to a map for lookup.
         if (rolesForm.getRoles() != null) {
             allSelectedRolesByPage.put(selectedAppIndex, rolesForm.getRoles());
-        }
-        if (selectedAppIndex >= selectedApps.size() - 1) {
-            // Clear the userEditRolesModel and page roles from session to avoid stale data
-            session.removeAttribute("userEditRolesModel");
-            session.removeAttribute("editUserAllSelectedRoles");
-            // Flatten the map to a single list of all selected roles across all pages.
-            List<String> allSelectedRoles = allSelectedRolesByPage.values().stream().filter(Objects::nonNull)
-                    .flatMap(List::stream)
-                    .toList();
-            CurrentUserDto currentUserDto = loginService.getCurrentUser(authentication);
-            UserProfile editorProfile = loginService.getCurrentProfile(authentication);
-            if (roleAssignmentService.canAssignRole(editorProfile.getAppRoles(), allSelectedRoles)) {
-                try {
-                    String changed = userService.updateUserRoles(id, allSelectedRoles, currentUserDto.getUserId());
-                    UpdateUserAuditEvent updateUserAuditEvent = new UpdateUserAuditEvent(
-                            editorProfile.getId(),
-                            currentUserDto,
-                            user != null ? user.getEntraUser() : null, changed,
-                            "role");
-                    eventService.logEvent(updateUserAuditEvent);
-                } catch (RoleCoverageException e) {
-                    String errorMessage = e.getMessage();
-                    return "redirect:/admin/users/edit/" + uuid + "/roles?errorMessage=" + errorMessage;
-                }
-            }
-            return "redirect:/admin/users/manage/" + uuid;
         } else {
-            modelFromSession.addAttribute("editUserRolesSelectedAppIndex", selectedAppIndex + 1);
-            session.setAttribute("editUserAllSelectedRoles", allSelectedRolesByPage);
-            session.setAttribute("userEditRolesModel", modelFromSession);
-
+            allSelectedRolesByPage.put(selectedAppIndex, new ArrayList<>());
+        }
+        session.setAttribute("editUserAllSelectedRoles", allSelectedRolesByPage);
+        List<String> selectedApps = getListFromHttpSession(session, "selectedApps", String.class)
+                .orElseGet(ArrayList::new);
+        // Ensure passed in ID is a valid UUID to avoid open redirects.
+        UUID uuid = UUID.fromString(id);
+        if (selectedAppIndex >= selectedApps.size() - 1) {
+            return "redirect:/admin/users/edit/" + uuid + "/roles-check-answer";
+        } else {
             return "redirect:/admin/users/edit/" + uuid + "/roles?selectedAppIndex=" + (selectedAppIndex + 1);
         }
+    }
+
+    @GetMapping("/users/edit/{id}/roles-check-answer")
+    @PreAuthorize("@accessControlService.canEditUser(#id)")
+    public String editUserRolesCheckAnswer(@PathVariable String id,
+            @RequestParam(value = "errorMessage", required = false) String errorMessage,
+            Model model, HttpSession session, Authentication authentication) {
+        UserProfile editorUserProfile = loginService.getCurrentProfile(authentication);
+        UserProfileDto user = userService.getUserProfileById(id).orElseThrow();
+        @SuppressWarnings("unchecked")
+        Map<Integer, List<String>> editUserAllSelectedRoles = (Map<Integer, List<String>>) session
+                .getAttribute("editUserAllSelectedRoles");
+        if (editUserAllSelectedRoles == null) {
+            return "redirect:/admin/users/manage/" + id;
+        }
+        UserType userType = user.getUserType();
+        List<String> selectedApps = getListFromHttpSession(session, "selectedApps", String.class)
+                .orElseGet(ArrayList::new);
+        Map<String, AppDto> editableApps = userService.getAppsByUserType(userType).stream()
+                .filter(app -> roleAssignmentService.canUserAssignRolesForApp(editorUserProfile, app))
+                .filter(app -> selectedApps.contains(app.getId()))
+                .collect(Collectors.toMap(AppDto::getId, Function.identity()));
+
+        List<UUID> roleIds = editUserAllSelectedRoles.values()
+                .stream()
+                .flatMap(List::stream)
+                .map(UUID::fromString)
+                .toList();
+        Map<String, AppRoleDto> roles = userService.getRolesByIdIn(roleIds);
+        String backUrl = "";
+        List<UserRole> selectedAppRole = new ArrayList<>();
+        if (editUserAllSelectedRoles.isEmpty()) {
+            backUrl = "/admin/users/edit/" + id + "/apps";
+        } else {
+            int size = editUserAllSelectedRoles.size();
+            backUrl = "/admin/users/edit/" + id + "/roles?selectedAppIndex=" + size;
+            for (Integer key : editUserAllSelectedRoles.keySet()) {
+                String url = "/admin/users/edit/" + id + "/roles?selectedAppIndex=" + key;
+                if (Objects.nonNull(editUserAllSelectedRoles.get(key))
+                        && !editUserAllSelectedRoles.get(key).isEmpty()) {
+                    List<String> selectedRoles = editUserAllSelectedRoles.get(key);
+                    for (String selectedRole : selectedRoles) {
+                        AppRoleDto role = roles.get(selectedRole);
+                        UserRole userRole = new UserRole();
+                        userRole.setRoleName(role.getName());
+                        userRole.setAppName(role.getApp().getName());
+                        userRole.setUrl(url);
+                        selectedAppRole.add(userRole);
+                    }
+                } else {
+                    UserRole userRole = new UserRole();
+                    if (selectedApps.size() <= key) {
+                        userRole.setAppName("Unknown app");
+                        String err = "Unknown app selected, please re-select apps";
+                        if (Objects.isNull(errorMessage)) {
+                            errorMessage = err;
+                        } else {
+                            errorMessage += " " + err;
+                        }
+                    } else {
+                        userRole.setAppName(editableApps.get(selectedApps.get(key)).getName());
+                    }
+                    userRole.setRoleName("No Role selected");
+                    userRole.setUrl(url);
+                    selectedAppRole.add(userRole);
+                }
+            }
+        }
+        if (errorMessage != null) {
+            model.addAttribute("errorMessage", errorMessage);
+        }
+        model.addAttribute("user", user);
+        model.addAttribute("selectedAppRole", selectedAppRole);
+        model.addAttribute("backUrl", backUrl);
+        model.addAttribute(ModelAttributes.PAGE_TITLE, "Edit user services - " + user.getFullName());
+        return "edit-user-roles-check-answer";
+    }
+
+    @PostMapping("/users/edit/{id}/roles-check-answer")
+    @PreAuthorize("@accessControlService.canEditUser(#id)")
+    public String editUserRolesCheckAnswerSubmit(@PathVariable String id, HttpSession session,
+            Authentication authentication) {
+        UUID uuid = UUID.fromString(id);
+
+        UserProfile editorUserProfile = loginService.getCurrentProfile(authentication);
+        UserProfileDto user = userService.getUserProfileById(id).orElseThrow();
+        @SuppressWarnings("unchecked")
+        Map<Integer, List<String>> allSelectedRolesByPage = (Map<Integer, List<String>>) session
+                .getAttribute("editUserAllSelectedRoles");
+        if (allSelectedRolesByPage == null) {
+            return "redirect:/admin/users/manage/" + id;
+        }
+        List<String> allSelectedRoles = allSelectedRolesByPage.values().stream().filter(Objects::nonNull)
+                .flatMap(List::stream)
+                .toList();
+        List<String> nonEditableRoles = userService.getUserAppRolesByUserId(id).stream()
+                .filter(role -> !roleAssignmentService.canUserAssignRolesForApp(editorUserProfile, role.getApp()))
+                .map(AppRoleDto::getId)
+                .toList();
+        CurrentUserDto currentUserDto = loginService.getCurrentUser(authentication);
+        UserProfile editorProfile = loginService.getCurrentProfile(authentication);
+        if (roleAssignmentService.canAssignRole(editorProfile.getAppRoles(), allSelectedRoles)) {
+            Map<String, String> updateResult = userService.updateUserRoles(id, allSelectedRoles,
+                    nonEditableRoles, currentUserDto.getUserId());
+            if (updateResult.get("error") != null) {
+                String errorMessage = updateResult.get("error");
+                return "redirect:/admin/users/edit/" + uuid + "/roles-check-answer?errorMessage=" + errorMessage;
+            }
+            UpdateUserAuditEvent updateUserAuditEvent = new UpdateUserAuditEvent(
+                    editorProfile.getId(),
+                    currentUserDto,
+                    user.getEntraUser(), updateResult.get("diff"),
+                    "role");
+            eventService.logEvent(updateUserAuditEvent);
+        }
+        // Clear the session
+        session.removeAttribute("editUserAllSelectedRoles");
+        session.removeAttribute("selectedApps");
+        return "redirect:/admin/users/edit/" + id + "/confirmation";
     }
 
     /**
@@ -878,7 +1089,7 @@ public class UserController {
     @PreAuthorize("@accessControlService.authenticatedUserHasPermission(T(uk.gov.justice.laa.portal.landingpage.entity.Permission).EDIT_USER_OFFICE) && @accessControlService.canEditUser(#id)")
     public String editUserOffices(@PathVariable String id, Model model, HttpSession session) {
         UserProfileDto user = userService.getUserProfileById(id).orElseThrow();
-
+        session.removeAttribute("editUserOfficesModel");
         // Get user's current offices
         List<OfficeDto> userOffices = userService.getUserOfficesByUserId(id);
         Set<String> userOfficeIds = userOffices.stream()
@@ -893,6 +1104,28 @@ public class UserController {
         // Check if user has access to all offices
         boolean hasAllOffices = userOffices.isEmpty();
 
+        // Create form object or load from session if exist
+        OfficesForm officesForm = (OfficesForm) session.getAttribute("officesForm");
+        if (officesForm == null) {
+            officesForm = new OfficesForm();
+            List<String> selectedOffices = new ArrayList<>();
+            if (hasAllOffices) {
+                selectedOffices.add("ALL");
+            } else {
+                selectedOffices.addAll(userOfficeIds);
+            }
+            officesForm.setOffices(selectedOffices);
+        } else {
+            if (officesForm.getOffices() != null) {
+                if (officesForm.getOffices().contains("ALL")) {
+                    hasAllOffices = true;
+                } else {
+                    hasAllOffices = false;
+                    userOfficeIds = new HashSet<String>(officesForm.getOffices());
+                }
+            }
+        }
+        Set<String> finalUserOfficeIds = userOfficeIds;
         final List<OfficeModel> officeData = allOffices.stream()
                 .map(office -> new OfficeModel(
                         office.getCode(),
@@ -900,20 +1133,8 @@ public class UserController {
                                 office.getAddress().getAddressLine2(),
                                 office.getAddress().getCity(), office.getAddress().getPostcode()),
                         office.getId().toString(),
-                        userOfficeIds.contains(office.getId().toString())))
+                        finalUserOfficeIds.contains(office.getId().toString())))
                 .collect(Collectors.toList());
-
-        // Create form object
-        OfficesForm officesForm = new OfficesForm();
-        List<String> selectedOffices = new ArrayList<>();
-
-        if (hasAllOffices) {
-            selectedOffices.add("ALL");
-        } else {
-            selectedOffices.addAll(userOfficeIds);
-        }
-
-        officesForm.setOffices(selectedOffices);
 
         model.addAttribute("user", user);
         model.addAttribute("officesForm", officesForm);
@@ -941,8 +1162,7 @@ public class UserController {
     @PreAuthorize("@accessControlService.authenticatedUserHasPermission(T(uk.gov.justice.laa.portal.landingpage.entity.Permission).EDIT_USER_OFFICE) && @accessControlService.canEditUser(#id)")
     public String updateUserOffices(@PathVariable String id,
             @Valid OfficesForm officesForm, BindingResult result,
-            Authentication authentication,
-            Model model, HttpSession session) throws IOException {
+            Model model, HttpSession session) {
         if (result.hasErrors()) {
             log.debug("Validation errors occurred while updating user offices: {}", result.getAllErrors());
             // If there are validation errors, return to the edit user offices page with
@@ -969,13 +1189,22 @@ public class UserController {
             model.addAttribute("officeData", modelFromSession.getAttribute("officeData"));
             return "edit-user-offices";
         }
+        session.setAttribute("officesForm", officesForm);
+        return "redirect:/admin/users/edit/" + id + "/offices-check-answer";
+    }
 
+    @GetMapping("/users/edit/{id}/offices-check-answer")
+    @PreAuthorize("@accessControlService.authenticatedUserHasPermission(T(uk.gov.justice.laa.portal.landingpage.entity.Permission).EDIT_USER_OFFICE) && @accessControlService.canEditUser(#id)")
+    public String updateUserOfficesCheck(@PathVariable String id,
+            Model model, HttpSession session) {
+        OfficesForm officesForm = (OfficesForm) session.getAttribute("officesForm");
+        if (officesForm == null) {
+            return "redirect:/admin/users/edit/" + id + "/offices";
+        }
         // Update user offices
         List<String> selectedOffices = officesForm.getOffices() != null ? officesForm.getOffices() : new ArrayList<>();
-        List<String> selectOfficesDisplay = new ArrayList<>();
-        // Handle "ALL" option
+        List<OfficeModel> selectOfficesDisplay = new ArrayList<>();
         if (!selectedOffices.contains("ALL")) {
-            // If "ALL" is selected, get all available offices by firm
             Model modelFromSession = (Model) session.getAttribute("editUserOfficesModel");
             if (modelFromSession != null) {
                 @SuppressWarnings("unchecked")
@@ -985,26 +1214,55 @@ public class UserController {
                             : new ArrayList<>();
                     for (OfficeModel office : officeData) {
                         if (selectedOfficeIds.contains(office.getId())) {
-                            selectOfficesDisplay.add(office.getCode());
+                            selectOfficesDisplay.add(office);
                         }
                     }
                 }
             }
         }
+        Model modelFromSession = (Model) session.getAttribute("editUserOfficesModel");
+        model.addAttribute("userOffices", selectOfficesDisplay);
+        model.addAttribute("user", modelFromSession.getAttribute("user"));
+        return "edit-user-offices-check-answer";
+    }
+
+    @PostMapping("/users/edit/{id}/offices-check-answer")
+    @PreAuthorize("@accessControlService.authenticatedUserHasPermission(T(uk.gov.justice.laa.portal.landingpage.entity.Permission).EDIT_USER_OFFICE) && @accessControlService.canEditUser(#id)")
+    public String updateUserOfficesSubmit(@PathVariable String id,
+            Authentication authentication,
+            HttpSession session) throws IOException {
+        OfficesForm officesForm = (OfficesForm) session.getAttribute("officesForm");
+        if (officesForm == null) {
+            return "redirect:/admin/users/edit/" + id + "/offices";
+        }
+        // Update user offices
+        UserProfileDto userProfileDto = userService.getUserProfileById(id).orElseThrow();
+        List<String> selectedOffices = officesForm.getOffices() != null ? officesForm.getOffices() : new ArrayList<>();
 
         String changed = userService.updateUserOffices(id, selectedOffices);
         CurrentUserDto currentUserDto = loginService.getCurrentUser(authentication);
-        UserProfileDto userProfileDto = userService.getUserProfileById(id).orElse(null);
         UpdateUserAuditEvent updateUserAuditEvent = new UpdateUserAuditEvent(
-                userProfileDto != null ? userProfileDto.getId() : null,
+                userProfileDto.getId(),
                 currentUserDto,
-                userProfileDto != null ? userProfileDto.getEntraUser() : null,
+                userProfileDto.getEntraUser(),
                 changed, "office");
         eventService.logEvent(updateUserAuditEvent);
         // Clear the session model
         session.removeAttribute("editUserOfficesModel");
+        session.removeAttribute("officesForm");
+        return "redirect:/admin/users/edit/" + id + "/confirmation";
+    }
 
-        return "redirect:/admin/users/manage/" + id;
+    /**
+     * Update user detail Flow - Show confirmation page
+     */
+    @GetMapping("/users/edit/{id}/confirmation")
+    @PreAuthorize("@accessControlService.canEditUser(#id)")
+    public String editUserConfirmation(@PathVariable String id, Model model) {
+        UserProfileDto user = userService.getUserProfileById(id).orElseThrow();
+        model.addAttribute("user", user);
+        model.addAttribute(ModelAttributes.PAGE_TITLE, "User updated - " + user.getFullName());
+        return "edit-user-confirmation";
     }
 
     @GetMapping("/users/edit/{id}/cancel")
@@ -1017,20 +1275,12 @@ public class UserController {
         // Edit User Apps/Roles Form
         session.removeAttribute("selectedApps");
         session.removeAttribute("editUserAllSelectedRoles");
-        session.removeAttribute("userEditRolesModel");
-        session.removeAttribute("editUserRoles");
-        session.removeAttribute("availableRoles");
-        session.removeAttribute("userAssignedRoles");
-        session.removeAttribute("selectedAppIndex");
-        session.removeAttribute("editUserRolesCurrentApp");
-        session.removeAttribute("editUserRolesSelectedAppIndex");
 
         // Edit User Apps Form
-        session.removeAttribute("userAssignedApps");
-        session.removeAttribute("availableApps");
 
         // Edit User Offices Form
         session.removeAttribute("editUserOfficesModel");
+        session.removeAttribute("officesForm");
 
         // Clear any success messages
         session.removeAttribute("successMessage");
@@ -1054,20 +1304,25 @@ public class UserController {
     @GetMapping("/users/grant-access/{id}/apps")
     @PreAuthorize("@accessControlService.canEditUser(#id)")
     public String grantAccessEditUserApps(@PathVariable String id, ApplicationsForm applicationsForm, Model model,
-            HttpSession session) {
+            HttpSession session, Authentication authentication) {
+        UserProfile editorUserProfile = loginService.getCurrentProfile(authentication);
         UserProfileDto user = userService.getUserProfileById(id).orElseThrow();
         UserType userType = user.getUserType();
         Set<AppDto> userAssignedApps = userService.getUserAppsByUserId(id);
         List<AppDto> availableApps = userService.getAppsByUserType(userType);
 
+        List<AppDto> editableApps = availableApps.stream()
+                .filter(app -> roleAssignmentService.canUserAssignRolesForApp(editorUserProfile, app))
+                .toList();
+
         // Add selected attribute to available apps based on user assigned apps
-        availableApps.forEach(app -> {
+        editableApps.forEach(app -> {
             app.setSelected(userAssignedApps.stream()
                     .anyMatch(userApp -> userApp.getId().equals(app.getId())));
         });
 
         model.addAttribute("user", user);
-        model.addAttribute("apps", availableApps);
+        model.addAttribute("apps", editableApps);
 
         // Store the model in session to handle validation errors later
         session.setAttribute("grantAccessUserAppsModel", model);
@@ -1081,7 +1336,6 @@ public class UserController {
             @Valid ApplicationsForm applicationsForm, BindingResult result,
             Authentication authentication,
             Model model, HttpSession session) {
-
         if (result.hasErrors()) {
             log.debug("Validation errors occurred while selecting apps: {}", result.getAllErrors());
             // If there are validation errors, return to the apps page with errors
@@ -1106,15 +1360,21 @@ public class UserController {
         // If no apps are selected, persist empty roles to database and redirect to
         // manage user page
         if (selectedApps.isEmpty()) {
+            UserProfile editorUserProfile = loginService.getCurrentProfile(authentication);
             // Update user to have no roles (empty list)
             CurrentUserDto currentUserDto = loginService.getCurrentUser(authentication);
-            String changed = userService.updateUserRoles(id, new ArrayList<>(), currentUserDto.getUserId());
+            List<String> nonEditableRoles = userService.getUserAppRolesByUserId(id).stream()
+                    .filter(role -> !roleAssignmentService.canUserAssignRolesForApp(editorUserProfile, role.getApp()))
+                    .map(AppRoleDto::getId)
+                    .toList();
+            Map<String, String> updateResult = userService.updateUserRoles(id, new ArrayList<>(), nonEditableRoles,
+                    currentUserDto.getUserId());
             UserProfileDto userProfileDto = userService.getUserProfileById(id).orElse(null);
             UpdateUserAuditEvent updateUserAuditEvent = new UpdateUserAuditEvent(
                     userProfileDto != null ? userProfileDto.getId() : null,
                     currentUserDto,
                     userProfileDto != null ? userProfileDto.getEntraUser() : null,
-                    changed, "roles");
+                    updateResult.get("diff"), "roles");
             eventService.logEvent(updateUserAuditEvent);
             // Ensure passed in ID is a valid UUID to avoid open redirects.
             UUID uuid = UUID.fromString(id);
@@ -1138,16 +1398,18 @@ public class UserController {
             Authentication authentication,
             Model model, HttpSession session) {
 
+        UserProfile editorUserProfile = loginService.getCurrentProfile(authentication);
         final UserProfileDto user = userService.getUserProfileById(id).orElseThrow();
         List<String> selectedApps = getListFromHttpSession(session, "grantAccessSelectedApps", String.class)
                 .orElseGet(() -> {
                     // If no selectedApps in session, get user's current apps
-                    Set<AppDto> userApps = userService.getUserAppsByUserId(id);
-                    List<String> userAppIds = userApps.stream()
+                    List<String> userApps = userService.getUserAppsByUserId(id)
+                            .stream()
+                            .filter(app -> roleAssignmentService.canUserAssignRolesForApp(editorUserProfile, app))
                             .map(AppDto::getId)
-                            .collect(Collectors.toList());
-                    session.setAttribute("grantAccessSelectedApps", userAppIds);
-                    return userAppIds;
+                            .toList();
+                    session.setAttribute("grantAccessSelectedApps", userApps);
+                    return userApps;
                 });
 
         // Ensure the selectedAppIndex is within bounds
@@ -1172,7 +1434,8 @@ public class UserController {
         List<AppRoleDto> roles = userService.getAppRolesByAppIdAndUserType(selectedApps.get(currentSelectedAppIndex),
                 user.getUserType());
         UserProfile editorProfile = loginService.getCurrentProfile(authentication);
-        roles = roleAssignmentService.filterRoles(editorProfile.getAppRoles(), roles);
+        roles = roleAssignmentService.filterRoles(editorProfile.getAppRoles(),
+                roles.stream().map(role -> UUID.fromString(role.getId())).toList());
         List<AppRoleDto> userRoles = userService.getUserAppRolesByUserId(id);
 
         AppDto currentApp = userService.getAppByAppId(selectedApps.get(currentSelectedAppIndex)).orElseThrow();
@@ -1268,6 +1531,7 @@ public class UserController {
         // Add the roles for the currently selected app to a map for lookup.
         allSelectedRolesByPage.put(selectedAppIndex, rolesForm.getRoles());
         if (selectedAppIndex >= selectedApps.size() - 1) {
+            UserProfile currentUserProfile = loginService.getCurrentProfile(authentication);
             // Clear the grantAccessUserRolesModel and page roles from session to avoid
             // stale data
             session.removeAttribute("grantAccessUserRolesModel");
@@ -1276,14 +1540,19 @@ public class UserController {
             List<String> allSelectedRoles = allSelectedRolesByPage.values().stream().filter(Objects::nonNull)
                     .flatMap(List::stream)
                     .toList();
+            List<String> nonEditableRoles = userService.getUserAppRolesByUserId(id).stream()
+                    .filter(role -> !roleAssignmentService.canUserAssignRolesForApp(currentUserProfile, role.getApp()))
+                    .map(AppRoleDto::getId)
+                    .toList();
             CurrentUserDto currentUserDto = loginService.getCurrentUser(authentication);
             UserProfile editorProfile = loginService.getCurrentProfile(authentication);
             if (roleAssignmentService.canAssignRole(editorProfile.getAppRoles(), allSelectedRoles)) {
-                String changed = userService.updateUserRoles(id, allSelectedRoles, currentUserDto.getUserId());
+                Map<String, String> updateResult = userService.updateUserRoles(id, allSelectedRoles, nonEditableRoles,
+                        currentUserDto.getUserId());
                 UpdateUserAuditEvent updateUserAuditEvent = new UpdateUserAuditEvent(
                         editorProfile.getId(),
                         currentUserDto,
-                        user != null ? user.getEntraUser() : null, changed,
+                        user != null ? user.getEntraUser() : null, updateResult.get("diff"),
                         "role");
                 eventService.logEvent(updateUserAuditEvent);
             }
@@ -1435,14 +1704,18 @@ public class UserController {
      */
     @GetMapping("/users/grant-access/{id}/check-answers")
     @PreAuthorize("@accessControlService.canEditUser(#id)")
-    public String grantAccessCheckAnswers(@PathVariable String id, Model model) {
+    public String grantAccessCheckAnswers(@PathVariable String id, Model model, Authentication authentication) {
+        UserProfile editorUserProfile = loginService.getCurrentProfile(authentication);
         UserProfileDto user = userService.getUserProfileById(id).orElseThrow();
 
         // Get user's current app roles
         List<AppRoleDto> userAppRoles = userService.getUserAppRolesByUserId(id);
+        List<AppRoleDto> editableUserAppRoles = userAppRoles.stream()
+                .filter(role -> roleAssignmentService.canUserAssignRolesForApp(editorUserProfile, role.getApp()))
+                .toList();
 
         // Group roles by app name and sort by app name
-        Map<String, List<AppRoleDto>> groupedAppRoles = userAppRoles.stream().sorted()
+        Map<String, List<AppRoleDto>> groupedAppRoles = editableUserAppRoles.stream().sorted()
                 .collect(Collectors.groupingBy(
                         appRole -> appRole.getApp().getName(),
                         LinkedHashMap::new, // Preserve insertion order
@@ -1460,7 +1733,7 @@ public class UserController {
         List<OfficeDto> userOffices = userService.getUserOfficesByUserId(id);
 
         model.addAttribute("user", user);
-        model.addAttribute("userAppRoles", userAppRoles);
+        model.addAttribute("userAppRoles", editableUserAppRoles);
         model.addAttribute("groupedAppRoles", sortedGroupedAppRoles);
         model.addAttribute("userOffices", userOffices);
         model.addAttribute("externalUser", user.getUserType() == UserType.EXTERNAL);
@@ -1635,22 +1908,22 @@ public class UserController {
     @PostMapping("/users/reassign-firm/{id}/select-firm")
     @PreAuthorize("@accessControlService.authenticatedUserHasPermission(T(uk.gov.justice.laa.portal.landingpage.entity.Permission).EDIT_USER_FIRM)")
     public String processFirmSelection(@PathVariable String id,
-                                     @Valid @ModelAttribute("firmReassignmentForm") FirmReassignmentForm form,
-                                     BindingResult bindingResult,
-                                     Model model,
-                                     RedirectAttributes redirectAttributes) {
+            @Valid @ModelAttribute("firmReassignmentForm") FirmReassignmentForm form,
+            BindingResult bindingResult,
+            Model model,
+            RedirectAttributes redirectAttributes) {
         try {
             // Get the user to be reassigned
             Optional<UserProfileDto> optionalUser = userService.getUserProfileById(id);
-            
+
             if (optionalUser.isEmpty()) {
                 log.warn("User not found for reassignment: {}", id);
                 redirectAttributes.addFlashAttribute("errorMessage", "User not found");
                 return "redirect:/admin/users/manage/" + id;
             }
-            
+
             UserProfileDto user = optionalUser.get();
-            
+
             // Verify this is an external user
             if (user.getUserType() != UserType.EXTERNAL) {
                 log.warn("Attempted to reassign internal user: {}", id);
@@ -1658,35 +1931,35 @@ public class UserController {
                 model.addAttribute("user", user);
                 return "reassign-firm/reassign-user-firm-select-firm";
             }
-            
+
             // Check for validation errors (firm selection)
             if (bindingResult.hasFieldErrors("firmSearch") || bindingResult.hasFieldErrors("selectedFirmId")) {
                 model.addAttribute("user", user);
                 return "reassign-firm/reassign-user-firm-select-firm";
             }
-            
+
             // Validate that a firm was actually selected
             if (form.getSelectedFirmId() == null) {
                 model.addAttribute("errorMessage", "Please select a firm from the search results");
                 model.addAttribute("user", user);
                 return "reassign-firm/reassign-user-firm-select-firm";
             }
-            
+
             // Get firm details for the reason page
             FirmDto selectedFirm = firmService.getFirm(form.getSelectedFirmId());
-            
+
             if (selectedFirm == null) {
                 model.addAttribute("errorMessage", "Selected firm not found");
                 model.addAttribute("user", user);
                 return "reassign-firm/reassign-user-firm-select-firm";
             }
-            
+
             // Store firm details in redirect attributes to pass to reason page
             redirectAttributes.addAttribute("selectedFirmId", form.getSelectedFirmId());
             redirectAttributes.addAttribute("selectedFirmName", selectedFirm.getName());
-            
+
             return "redirect:/admin/users/reassign-firm/" + id + "/reason";
-            
+
         } catch (Exception e) {
             log.error("Error processing firm selection for user {}: {}", id, e.getMessage(), e);
             model.addAttribute("errorMessage", "An error occurred while processing your selection");
@@ -2029,8 +2302,15 @@ public class UserController {
      * specific users
      */
     @ExceptionHandler({ AuthorizationDeniedException.class, AccessDeniedException.class })
-    public RedirectView handleAuthorizationException(Exception ex, HttpSession session) {
-        log.warn("Authorization denied while accessing user: {}", ex.getMessage());
+    public RedirectView handleAuthorizationException(Exception ex, HttpSession session,
+            HttpServletRequest request) {
+        Object requestedPath = session != null ? session.getAttribute("SPRING_SECURITY_SAVED_REQUEST") : null;
+        String uri = request != null ? request.getRequestURI() : "unknown";
+        String method = request != null ? request.getMethod() : "unknown";
+        String referer = request != null ? request.getHeader("Referer") : null;
+        log.warn(
+                "Authorization denied while accessing user: reason='{}', method='{}', uri='{}', referer='{}', savedRequest='{}'",
+                ex.getMessage(), method, uri, referer, requestedPath);
         return new RedirectView("/not-authorised");
     }
 
